KGIL-204/artifacts/ingressFrontEnd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketplace
  namespace: kong-mesh-demo
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8088
